--- a/css/stylecss.css
+++ b/css/stylecss.css
@@ -14,79 +14,9 @@
   padding: 0; }
 
 body {
-  font-family: 'Raleway', sans-serif; }
-
-header a {
-  text-decoration: none;
-  color: black; }
-
-.nav_ {
-  background-color: black; }
-  .nav_ .ul_nav_vertical {
-    position: absolute;
-    padding: 0; }
-  .nav_ .ul_nav_horizontal {
-    height: 45px;
-    margin: 0px 100px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    list-style-type: none; }
-    .nav_ .ul_nav_horizontal a {
-      text-decoration: none;
-      color: white; }
-
-.nav_menu {
-  display: inline-block;
-  position: relative;
-  padding-left: 5px;
-  display: none;
-  z-index: 100; }
-  .nav_menu img {
-    height: 45px;
-    width: 45px; }
-  .nav_menu .display_menu {
-    display: none;
-    background-color: black;
-    width: 160px;
-    line-height: 40px;
-    padding-left: 0; }
-    .nav_menu .display_menu li {
-      display: block; }
-      .nav_menu .display_menu li a {
-        text-decoration: none;
-        color: white;
-        padding: 15px 15px 15px 20px; }
-      .nav_menu .display_menu li:hover {
-        background-color: #0f0f0f; }
-  .nav_menu:hover .display_menu {
-    display: block; }
-
-footer .tarjeta_footer_1 {
-  height: 100px;
-  width: 100px; }
-  footer .tarjeta_footer_1 img {
-    height: 100%;
-    width: 100%; }
-
-footer .footer_2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
-  height: 100px; }
-  footer .footer_2 .icon_footer_2 {
-    height: 40px;
-    width: 40px;
-    margin-left: 20px;
-    margin-right: 20px; }
-    footer .footer_2 .icon_footer_2 img {
-      height: 100%;
-      width: 100%; }
-
-footer .footer_3 a {
-  color: grey;
-  text-decoration: none; }
+  font-family: 'Raleway', sans-serif;
+  width: auto;
+  height: auto; }
 
 /* Este boton en cada pagina tiene el link de esa misma pagina
 para que te lleve a la parte superior ya que aun no se como usar
@@ -126,6 +56,58 @@ el codigo que corresponde para que lo haga*/
     bottom: 20px;
     right: 20px; } }
 
+header a {
+  text-decoration: none;
+  color: black; }
+
+header h1 {
+  color: black;
+  font-size: 35px;
+  font-family: "Raleway", sans-serif; }
+
+.navbar {
+  background-color: black; }
+  .navbar .ul_nav_vertical {
+    position: absolute;
+    padding: 0; }
+  .navbar .ul_nav_horizontal {
+    height: 45px;
+    margin: 0px 100px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style-type: none; }
+    .navbar .ul_nav_horizontal a {
+      text-decoration: none;
+      color: white; }
+
+.nav_menu {
+  display: inline-block;
+  position: relative;
+  padding-left: 5px;
+  display: none;
+  z-index: 100; }
+  .nav_menu img {
+    height: 45px;
+    width: 45px; }
+  .nav_menu .display_menu {
+    display: none;
+    background-color: black;
+    width: 160px;
+    line-height: 40px;
+    padding-left: 0; }
+    .nav_menu .display_menu li {
+      display: block; }
+      .nav_menu .display_menu li a {
+        text-decoration: none;
+        font-family: "Raleway", sans-serif;
+        color: white;
+        padding: 15px 15px 15px 20px; }
+      .nav_menu .display_menu li:hover {
+        background-color: #0f0f0f; }
+  .nav_menu:hover .display_menu {
+    display: block; }
+
 /******************** INICIO INDEX *********************/
 .carousel_movil {
   display: none; }
@@ -144,12 +126,15 @@ el codigo que corresponde para que lo haga*/
     .recommended_1 ul img {
       height: 100%;
       width: 100%; }
-    .recommended_1 ul h6 {
+    .recommended_1 ul h2 {
+      font-size: 14px;
+      font-family: "Raleway", sans-serif;
+      color: black;
       font-weight: bolder; }
     .recommended_1 ul p {
-      font-size: 13px;
-      text-align: center;
-      line-height: 15px; }
+      font-size: 14px;
+      font-family: "Raleway", sans-serif;
+      color: black; }
     .recommended_1 ul .button_recommended {
       background-color: black;
       color: white;
@@ -160,6 +145,7 @@ el codigo que corresponde para que lo haga*/
     .recommended_1 ul:hover .button_recommended {
       opacity: 1; }
 
+/******MEDIA QUERY INDEX******/
 @media screen and (min-width: 300px) and (max-width: 650px) {
   .carousel .carousel_dsk {
     display: none; }
@@ -171,9 +157,11 @@ el codigo que corresponde para que lo haga*/
     display: none; }
   .recommended_1 {
     margin: 10px; }
-    .recommended_1 h6 {
+    .recommended_1 h2 {
       font-size: 11px;
-      font-weight: bolder; }
+      font-weight: bolder;
+      font-family: "Raleway", sans-serif;
+      color: black; }
     .recommended_1 .button_recommended {
       background-color: black;
       color: white;
@@ -240,7 +228,13 @@ el codigo que corresponde para que lo haga*/
       text-align: center; }
     .main_perfumes .productos_perfumes h2 {
       font-size: 14px;
+      font-family: "Raleway", sans-serif;
+      color: black;
       font-weight: bolder; }
+    .main_perfumes .productos_perfumes p {
+      font-size: 14px;
+      font-family: "Raleway", sans-serif;
+      color: black; }
     .main_perfumes .productos_perfumes .boton_compra_perfume {
       opacity: 0; }
       .main_perfumes .productos_perfumes .boton_compra_perfume .btn_compra {
@@ -251,6 +245,7 @@ el codigo que corresponde para que lo haga*/
   .main_perfumes .aside {
     width: 15%; }
 
+/******MEDIA QUERY PERFUMES******/
 @media screen and (min-width: 300px) and (max-width: 650px) {
   .main_perfumes .menu_perfumes {
     font-size: 12px; }
@@ -275,9 +270,13 @@ el codigo que corresponde para que lo haga*/
     margin-bottom: 30px;
     gap: 15px; }
   .main_perfumes h2 {
-    font-size: 11px; }
+    font-size: 11px;
+    font-family: "Raleway", sans-serif;
+    color: black; }
   .main_perfumes p {
-    font-size: 10px; }
+    font-size: 10px;
+    font-family: "Raleway", sans-serif;
+    color: black; }
   .main_perfumes .btn_compra {
     background-color: black;
     color: white;
@@ -362,7 +361,13 @@ el codigo que corresponde para que lo haga*/
       text-align: center; }
     .main_maquillajes .productos_maquillajes h2 {
       font-size: 14px;
+      font-family: "Raleway", sans-serif;
+      color: black;
       font-weight: bolder; }
+    .main_maquillajes .productos_maquillajes p {
+      font-size: 14px;
+      font-family: "Raleway", sans-serif;
+      color: black; }
     .main_maquillajes .productos_maquillajes .boton_compra_maquillajes {
       opacity: 0; }
       .main_maquillajes .productos_maquillajes .boton_compra_maquillajes .btn_compra {
@@ -373,6 +378,7 @@ el codigo que corresponde para que lo haga*/
   .main_maquillajes .aside {
     width: 15%; }
 
+/******MEDIA QUERY MAQUILLAJES******/
 @media screen and (min-width: 300px) and (max-width: 650px) {
   .main_maquillajes .menu_maquillajes {
     font-size: 12px; }
@@ -398,9 +404,13 @@ el codigo que corresponde para que lo haga*/
     gap: 15px; }
   .main_maquillajes h2 {
     font-weight: bolder;
-    font-size: 11px; }
+    font-size: 11px;
+    font-family: "Raleway", sans-serif;
+    color: black; }
   .main_maquillajes p {
-    font-size: 10px; }
+    font-size: 10px;
+    font-family: "Raleway", sans-serif;
+    color: black; }
   .main_maquillajes .btn_compra {
     background-color: black;
     color: white;
@@ -486,7 +496,13 @@ el codigo que corresponde para que lo haga*/
       text-align: center; }
     .main_unias .productos_unias h2 {
       font-size: 14px;
+      font-family: "Raleway", sans-serif;
+      color: black;
       font-weight: bolder; }
+    .main_unias .productos_unias p {
+      font-size: 14px;
+      font-family: "Raleway", sans-serif;
+      color: black; }
     .main_unias .productos_unias .boton_compra_unias {
       opacity: 0; }
       .main_unias .productos_unias .boton_compra_unias .btn_compra {
@@ -497,6 +513,7 @@ el codigo que corresponde para que lo haga*/
   .main_unias .aside {
     width: 15%; }
 
+/******MEDIA QUERY UNIAS******/
 @media screen and (min-width: 300px) and (max-width: 650px) {
   .main_unias .menu_unias {
     font-size: 12px; }
@@ -522,9 +539,13 @@ el codigo que corresponde para que lo haga*/
     gap: 15px; }
   .main_unias h2 {
     font-weight: bolder;
-    font-size: 11px; }
+    font-size: 11px;
+    font-family: "Raleway", sans-serif;
+    color: black; }
   .main_unias p {
-    font-size: 10px; }
+    font-size: 10px;
+    font-family: "Raleway", sans-serif;
+    color: black; }
   .main_unias .btn_compra {
     background-color: black;
     color: white;
@@ -572,8 +593,39 @@ iframe {
   display: flex;
   flex-direction: column; }
 
+/******MEDIA QUERY CONTACTO******/
 @media only screen and (max-width: 766px) {
   .main_contacto img {
     display: none; }
   .formulario_contacto {
     padding: 20px; } }
+
+footer .tarjeta_footer_1 {
+  height: 100px;
+  width: 100px; }
+  footer .tarjeta_footer_1 img {
+    height: 100%;
+    width: 100%; }
+
+footer p {
+  color: black; }
+
+footer .footer_2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  height: 100px; }
+  footer .footer_2 .icon_footer_2 {
+    height: 40px;
+    width: 40px;
+    margin-left: 20px;
+    margin-right: 20px; }
+    footer .footer_2 .icon_footer_2 img {
+      height: 100%;
+      width: 100%; }
+
+footer .footer_3 a {
+  font-family: "Raleway", sans-serif;
+  color: grey;
+  text-decoration: none; }
